# -courses_fast_api

./: .gitignore  Dockerfile  Pipfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  sample test commands.txt  test_courses_data.json  test_data.json
Courses API/: bruno.json
Courses API/Courses/: CreateCourses.bru  DeleteCoursesById.bru  GetCourses.bru  GetCoursesById.bru  UpdateCoursesById.bru
Courses API/Modules/: CreateModules.bru  DeleteModulesById.bru  GetModules.bru  GetModulesById.bru  UpdateModulesById.bru
Courses API/Subjects/: CreateSubjects.bru  DeleteSubjectsById.bru  GetSubjects.bru  GetSubjectsById.bru  UpdateSubjects.bru
Courses API/Users/: GetUserById.bru  GetUsers.bru  UserLogin.bru  UserLogout.bru  UserRegister.bru
Courses API/environments/: CoursesEnv.bru
auth/: authenticate.py  jwt_jose_provider.py  jwt_provider.py
core/: exceptions.py  settings.py
crud/: courses_crud.py  modules_crud.py  subjects_crud.py  users_crud.py
db/base/16384/: 1247  1249  1259  1259_vm  16427  16427_fsm  16429  16435  16435_fsm  16437  16438  16439  16439_fsm  16441  16442  16493  16495  16496  16504  16507  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  (+13 more)
db/base/16519/: 1247  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  2579  2604  2604_vm  2606  2606_vm  2608  2608_fsm  2608_vm  2610  2610_vm  2619  2619_fsm  2619_vm  2620  2620_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2673_fsm  2674  2674_fsm  2678  2679  2696  (+22 more)
db/global/: 1260  1262  2671  2672  pg_control
db/pg_stat/: global.stat
db/pg_xact/: 0000
migrations/: env.py
migrations/versions/: 2022_08_10_0923-e7155ed1f3c0_test_all_ok.py  2022_08_10_1935-c768640b8a7c_rev1.py  2022_08_10_2036-6820811523b3_add_test_column_in_courses_table.py  2022_08_10_2040-efc225014398_remove_test_column_in_courses_table.py
mock_data/: MOCK_DATA_sample_super_users.json  MOCK_DATA_sample_users.json
models/: __init__.py  course_models.py  module_models.py  session.py  subject_models.py  user_models.py
reports/: test_bt.html
routers/: __init__.py  courses_routes.py  modules_routes.py  subject_routes.py  users_routes.py
schemas/: __init__.py  auth_schemas.py  course_schemas.py  module_schemas.py  schemas.py  subject_schemas.py  user_schemas.py
tests/: conf_test_db.py  conftest.py
tests/crud/: conftest.py  test_user_crud.py
tests/routers/: test_courses_routes.py  test_modules_routes.py  test_subjects_routes.py  test_user_routes.py
tests/swe_project/: test_bt.py  test_cfg.py  test_ddg.py  test_fsm.py  test_pt.py
utils/: __init__.py  decorators.py  dependencies.py  generate_uuid.py  tags.py
